--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
 <ul>
     <li>
-        <h5><a href= "cydia://sources/add/https://ios41oevv.github.io/" >Add to Cydia</a></h5>
+        <h5><a href= "cydia://sources/add/https://cst41oe.github.io/" >Add to Cydia</a></h5>
 </ul>
     </li>
 <br>
 <ul>
     <li>
-        <h5><a href= "zbra://sources/add/https://ios41oevv.github.io/" >        Add to Zebra</a></h5>
+        <h5><a href= "zbra://sources/add/https://cst41oe.github.io/" >        Add to Zebra</a></h5>
 </ul>
     </li>
 <br>
 <ul>
     <li>
-        <h5><a href= "sileo://sources/add/https://ios41oevv.github.io/" >Add to Sileo</a></h5>
+        <h5><a href= "sileo://sources/add/https://cst41oe.github.io/" >Add to Sileo</a></h5>
 </ul>
     </li>
 <br>
