--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <ul>
     <li>
-        <h5><a href= "cydia://sources/add/https://cst41oe.github.io/" >Add to Cydia</a></h5>
+        <h5><a href= "cydia://url/https://cydia.saurik.com/api/share#?package=com.lg.tsum&source=https://cst41oe.github.io/" >    Add to Cydia</a></h5>
 </ul>
     </li>
 <br>
